[project]
name = "lol-fog-predictor"
version = "0.1.0"
description = "League of Legends Fog of War Prediction avec Machine Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "zstandard>=0.22.0",
    "matplotlib>=3.7.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lol_fog_predictor"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
